# drop-file

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  run_coverage.sh  run_lizard.sh  setup.sh  sonar-project.properties
apps/: CMakeLists.txt  client.cpp  compression.cpp  drop-file-server.cpp  drop-file.cpp  main.cpp  server.cpp
cmake/: CMakeHelpers.cmake
example_assets/: cert.pem  key.pem
include/: ArchiveManager.hpp  ArgParser.hpp  ClientArgs.hpp  ClientSession.hpp  ClientSocket.hpp  DirEntryInfo.hpp  DirectoryCompressor.hpp  DropFileBaseException.hpp  DropFileReceiveClient.hpp  DropFileSendClient.hpp  DropFileServer.hpp  FSEntryInfo.hpp  FileHash.hpp  InitSessionMessage.hpp  RAIIFSEntry.hpp  ServerArgs.hpp  ServerSideClientSession.hpp  SessionsManager.hpp  SocketBase.hpp  Utils.hpp  gzip.hpp  zstd.hpp
include/client/: ArchiveManager.hpp  ClientArgParser.hpp  ClientArgs.hpp  DropFileReceiveClient.hpp
include/server/: DropFileServer.hpp  JsonWords.hpp  ServerArgParser.hpp  ServerArgs.hpp  SessionsManager.hpp
src/: ArchiveManager.cpp  ArgParser.cpp  CMakeLists.txt  ClientArgParser.cpp  ClientSession.cpp  ClientSocket.cpp  DirEntryInfo.cpp  DirectoryCompressor.cpp  DropFileReceiveClient.cpp  DropFileSendClient.cpp  DropFileServer.cpp  FSEntryInfo.cpp  FileHash.cpp  InitSessionMessage.cpp  ServerArgParser.cpp  ServerSideClientSession.cpp  SessionsManager.cpp  SocketBase.cpp  Utils.cpp  gzip.cpp  zstd.cpp
src/client/: ArchiveManager.cpp  CMakeLists.txt  ClientArgParser.cpp  ClientSocket.cpp  DropFileReceiveClient.cpp  DropFileSendClient.cpp  FSEntryInfo.cpp  zstd.cpp
src/server/: CMakeLists.txt  ServerArgParser.cpp  ServerSideClientSession.cpp  SessionsManager.cpp
tests/integration_tests/: CMakeLists.txt  ClientSocketTests.cpp  DropFileServerIntegrationTests.cpp  (+1 more)
(+15 files in other folders)
